# snippets

./: README.md
c/atof/: atof.c
c/bufio-scanner/: Makefile  README.md  buffer.c  buffer.h  main.c  reader.c  reader.h  scanner.c  scanner.h
c/c11-generic/: CMakeLists.txt  Makefile  generic.c  generic_int_to_pointer_cast.c
c/enum_conv/: enum_conv.c
c/eresp/: .travis.sh  .travis.yml  CMakeLists.txt  README.md
c/eresp-draft/: CMakeLists.txt  Makefile  README.md
c/eresp-draft/examples/: simple.c
c/eresp-draft/include/: eresp.h
c/eresp-draft/src/: reader.c
c/eresp/doc/: protocol.md
c/eresp/examples/: simple.c
c/eresp/extra/arduino/: Makefile  arduino.ino
c/eresp/extra/arduino/libraries/eRESP/: eresp.cpp  eresp.h  keywords.txt  readme.txt
c/eresp/extra/golang/: main.go
c/eresp/src/: eresp.c  eresp.h
c/eresp/tests/: CMakeLists.txt  eresp.cpp
c/euclidean/: main  main.c
c/event/: main.c
c/ihex/: ihex.c
c/io/: example_stdio.c
c/libsyntax7/: CMakeLists.txt  Doxyfile  Makefile  README.md
c/libsyntax7/cmake/: CheckCCompilerFlag.txt  Lint.txt
c/libsyntax7/doc/: conf.py  contents.rst
c/libsyntax7/include/: s7.h
c/libsyntax7/src/: scanner.c
c/libsyntax7/src/dict/: c_language.c
c/libsyntax7/tests/: CMakeLists.txt  scanner.c
c/nanokv/: CMakeLists.txt  LICENSE.md  Makefile  README.md
c/nanokv/cmake/: FindHiredis.cmake
c/nanokv/docs/: Building.md  memory_model.md
c/nanokv/include/: nanokv.h
c/nanokv/include/nanokv/backend/: dummy.h  redis.h
c/nanokv/src/: nanokv.c
c/nanokv/src/backend/: mem.h
c/nanokv/src/backend/dummy/: dummy.c
c/nanokv/src/backend/mem/: mem.c
c/nanokv/src/backend/redis/: redis.c
c/nanokv/tests/: CMakeLists.txt  backend_dummy.c  backend_redis.c
c/reflection/: README.md
cmake/: README.md
cmake/filepath/: CMakeLists.txt  README.md  filepath.c
cmake/find-php/: README.md
cmake/library-shared-static/: CMakeLists.txt  README.md  foo.c
embedded/: README.md
golang/: LICENSE  README.md
golang/aes/: main.go
golang/appcast/: Caddyfile  main.go  sparkle.go
golang/bjf/: README.md
golang/boltdb-orm/: config.go  main.go
golang/certpubkey/: main.go  rsasign.go
golang/channel-sync/: README.md  main.go  main_test.go
golang/config-interface/: README.md  main.go  main_test.go
golang/disk/: README.md  disk.go  disk_darwin.go  disk_freebsd_amd64.go  disk_linux_amd64.go  partition.go
golang/email/: config.yaml  main.go  template.html
golang/emptyvar/: main.go
golang/envconf/: README.md  decode.go  decode_test.go
golang/envconfig/: LICENSE  MAINTAINERS  README.md  doc.go  envconfig.go  envconfig_test.go
golang/exe-symlink/: main.go
golang/function-map/: main.go
golang/getit/: main.go
golang/gobuild/: main.go
golang/gogorpc/: generate.sh  msg.go  msg.pb.go  msg.proto  msg_test.go
golang/goja/: main.go  test.js
golang/gopic/: Makefile  README.md  gopic.go  http.go  indexer.go  indexerstat.go
golang/gpg/: clearsign.go
golang/graphql-mangos/: Makefile  README.md
golang/grpc-distrib-reqrep/: README.md  generate.go  remote.pb.go  remote.proto
golang/grpc-fileservice/: gen.go  service.pb.go  service.proto
golang/grpc-petstore/: README.md  generate.sh  petstore.pb.go  petstore.pb.gw.go  petstore.proto  petstore.swagger.json  petstore_curltest.sh
golang/grpc-pubsub/: gen.go  pubsub.pb.go  pubsub.proto
golang/gzip/: main.go
golang/http-rest/: README.md  create.sh  main.go
golang/interfaces/: main.go
golang/ioctl-disk/: README.md  main.go  opcodes.c
golang/ioreader/: main.go  mystruct.go  tcpserver.go
golang/json-rawmessage/: main.go
golang/ldflags/: README.md  main.go
golang/logrus-routing/: main.go
golang/macaron/: main.go
golang/macaron-url-routing/: main.go  main.key
golang/muci/: README.md  agent.go  artifact.go  environment.go  job.go  localagent.go  main.go  material.go  pipeline.go  remoteagent.go  resource.go  server.go  sshagent.go  stage.go  task.go
golang/nocopy/: README.md  main.go
golang/prosody_auth_custom_http/: main.go
golang/redis-logger/: main.go
golang/redislog/: README.md  redis.go  redis_test.go
golang/revdial-grpc/: .service.proto.swp  Gopkg.toml  README.md  do.sh  gen.go  remote.sh  service.pb.go  service.proto
golang/schedule-function/: main.go
golang/secdl/: .debpkg.yml  .travis.yml  LICENSE  Makefile  README.md  doc.go  secdl.go  secdl_test.go
golang/ssh-shell/: main.go
golang/sshfp/: README.md  dns.go  main.go  ssh.go
golang/stdhtsrv/: README.md  certstore.go  dht.pb.go  dht.proto  dump.rdb  generate.sh  keypair.go  main.go
golang/stdin-smtp-writer/: main.go
golang/stdin-smtp-writer2/: main.go
golang/stdns/: decode.go  net_resolver.go  parse.go  stdns.go
golang/sysdetect/: .travis.sh  .travis.yml  NOTES.md  README.md  distribution.go  local.go  machineid.go  ssh.go  sysdetect.go  sysname.go  testsysdetector_darwin_test.go  testsysdetector_test.go
golang/templates/: README.md  generate.go  main.go
golang/text_template/: main.go
golang/ticker/: ticker.go
golang/time/: main.go
golang/transip/: README.md  apisettings.go  auth.go  auth_test.go  domainservice.go  errors.go  request.go  request_test.go  soap.go  uri.go  wsdl.go
golang/typeproxy/: main.go
golang/webdav/: main.go
golang/wss/: ep.go  main.go  (+1 more)
(+133 files in other folders)
